[package]
name = "burst"
version = "0.1.0"
edition = "2018"
description = "To be described later"
repository = "https://github.com/sprucely/burst"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
paste = "1.0"
arrayvec = "0.7.1"
lalrpop-util = "0.19.6"
regex = "1"
petgraph = "0.6.0"
bitflags = "1.3.2"
tracing = "0.1"
tracing-test = "0.2"
cuid = "1.2"
#weak_table = "0.3.2"